--- a/_lib/roles/tor/templates/tor.service.j2
+++ b/_lib/roles/tor/templates/tor.service.j2
@@ -1,6 +1,6 @@
 # /etc/systemd/system/tor.service
 [Unit]
-Description=Tor relay/bridge
+Description=Tor {{ role }}
 After=docker.service
 Requires=docker.service
 
@@ -9,14 +9,14 @@ PermissionsStartOnly=true
 Restart=on-failure
 ExecStart=/bin/sh -c ' \
  docker run --name=%p_$(uuidgen | cut -d- -f1) --rm \
- -e NAME="${NAME}" \
- -e CONTACT="${CONTACT}" \
- -e TOR_CONFIG_TEMPLATE="${ROLE}" \
+ -e NAME="{{ tor_name }}{{ role[0:1] }}{{ count }}" \
+ -e CONTACT="{{ operator }}" \
+ -e TOR_CONFIG_TEMPLATE="{{ role }}" \
  -p 80:80 \
  -p 443:443 \
  -p 4235:4235 \
  -v /tor-data:/home/tor/.tor:rw \
- quay.io/george_angel/tor:${TOR_VER}'
+ quay.io/george_angel/tor:{{ tor_ver }}'
 ExecStop=/bin/sh -c 'docker stop -t 3 "$(docker ps -q --filter=name=%p_)"'
 
 [Install]
