--- a/a-roles/tor/templates/tor.service.j2
+++ b/a-roles/tor/templates/tor.service.j2
@@ -16,7 +16,7 @@ ExecStart=/bin/sh -c ' \
  -p 443:443 \
  -p 4235:4235 \
  -v /tor-data:/home/tor/.tor:rw \
- quay.io/george_angel/tor:{{ tor_ver }}'
+ quay.io/george_angel/tor:{{ tor_ver }}_{{ tor_rel }}'
 ExecStop=/bin/sh -c 'docker stop -t 3 "$(docker ps -q --filter=name=%p_)"'
 
 [Install]
